<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">


    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/solveCellButton" />

    <Button
        android:id="@+id/solveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onSolveBoardButtonPressed"
        android:text="@string/solve"
        app:layout_constraintBaseline_toBaselineOf="@+id/solveCellButton"
        app:layout_constraintStart_toEndOf="@+id/timeTextView"
        app:layout_constraintEnd_toStartOf="@+id/solveCellButton" />

    <Button
        android:id="@+id/solveCellButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSolveCellButtonPressed"
        android:text="@string/solve_cell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"/>

    <fi.virri.game.sudoku.game.SudokuBoardView
        android:id="@+id/sudokuBoardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/solveButton" />

    <GridLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="onDigitButtonPressed"
            android:text="@string/one" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:onClick="onDigitButtonPressed"
            android:text="@string/two" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:onClick="onDigitButtonPressed"
            android:text="@string/three" />

        <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="onDigitButtonPressed"
            android:text="@string/four" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="onDigitButtonPressed"
            android:text="@string/five" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:onClick="onDigitButtonPressed"
            android:text="@string/six" />

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="onDigitButtonPressed"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="onDigitButtonPressed"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:onClick="onDigitButtonPressed"
            android:text="@string/nine" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:onClick="onResetButtonPressed"
            android:text="@string/reset" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="onSaveButtonPressed"
            android:text="@string/save" />

        <Button
            android:id="@+id/eraseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:onClick="onEraseButtonPressed"
            android:text="@string/erase" />

        <ImageButton
            android:id="@+id/notesButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="0"
            android:contentDescription="@string/notes"
            android:minHeight="48dp"
            android:onClick="onNotesButtonPressed"
            app:srcCompat="@drawable/notes_black" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>